# esp32_bme280

./: .gitignore  Cargo.toml  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
scripts/: env.sh  flash.sh
src/: fs.rs  hardware.rs  httpd.rs  main.rs  ntp.rs  sessions.rs
src/fs/: fathandle.rs
src/hardware/: ethernet.rs
