[package]
name = "esp32_bme280"
version = "0.1.0"
authors = ["René Rössler <rene@freshx.de>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bme280-rs = "0.1.0"
esp-idf-hal = "0.38"
esp-idf-sys = { version = "0.31", features = ["binstart", "native"] }
esp-idf-svc = { version = "0.42", features = ["experimental"] }
embedded-svc = "0.22"
embedded-hal = "0.2"
heapless = { version = "0.7", default-features = false }                     # same version as used by esp svc
log = "0.4"
once_cell = "1.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = { version = "0.30", features = ["elf"] }
anyhow = "1"
